--- a/index.html
+++ b/index.html
@@ -2,7 +2,138 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>StarGencia - A agência de viagem das estrelas!</title> 
+	<title>StarGencia - A agência de viagem das estrelas!</title>  
+	<style type="text/css">
+	*{
+		font: 13px Arial,Verdana black;
+		margin: 0 auto;
+		color: black;
+	}
+	.cabecalho {
+		background-color: #844076;
+		padding: 8%;
+		color: #f4e9d3;
+	}	
+	.logo{ 
+		float:left;
+		width: 30%;
+		 
+	}
+	.logo h1 { 
+		color: #f4e9d3;
+		font-size: 40px; 
+		text-align: center;
+	}
+	.logo h2{
+		font-size: 20px; 
+		color: #f4e9d3;
+	}	
+	.menu {
+		color: #f4e9d3;
+		float: left;
+		margin: -40px 300px
+	}
+	.menu ul {
+		text-align: center;
+		color: #f4e9d3;	
+	}
+	.menu li {
+		display: inline;
+		color:#f4e9d3;
+	}
+	.menu li:last-child {
+		border-right: none;
+		color: #f4e9d3;
+	} 
+	.conteudo {
+		float: left; 
+		padding: 20px; 
+		margin: 20px; 
+		width: 55%; 
+	}
+	.conteudo h1{
+		background-color: #ff7c48;
+		padding: 15px; 
+		font-size: 20px;
+		color:#f4e9d3;
+		text-align: center;
+		border-radius: 15px;
+	}
+	.conteudo h2{
+		background-color: #cc5579;
+		padding: 10px; 
+		font-size: 20px;
+		color:#f4e9d3;
+		border-radius: 15px;
+	}
+	.conteudo h3{
+		background-color: #cc5579; 
+		border-radius: 15px; 
+		font-size: 20px; 
+		padding: 10px;
+		color: #f4e9d3;
+	}
+	.conteudo p{
+		font-weight: bold;
+		font-size: 15px;  
+	}
+	.conteudo img{
+		margin: 40px;
+		height:400px ;
+		width: 500px;
+	}
+	.data  {
+		font-weight: bold;
+		font-size: 30px; 
+		padding: 20px; 
+		text-align: center;
+		color: black;
+	}
+	.formulario{
+		width: 20%;
+		float: right;
+		padding: 20px; 
+		margin: 20px 80px ;
+		background-color: #ffcf4f;
+		text-align: center;
+		border-radius: 5px;
+	}
+	.formulario fieldset{
+		border: none;
+	}
+	.formulario legend{
+		color:#cc5579;
+		font-size: 16px;
+		font-weight: bold;
+		margin-bottom: 20px;
+	}
+	.formulario input{
+		color: black;
+		width: 80%;
+		font-size: 16px;
+		padding: 10px;
+		display: block;
+		margin: 10px auto;
+	}
+	.formulario button{
+		background-color:#844076;
+		padding: 20px 30px;
+		border-radius: 8px;
+		color:#f4e9d3;
+		border: none;
+		cursor: pointer;
+		position: relative;
+		top: 50px;
+		font-size: 16px;
+		border-radius: 5px;
+	}
+	.rodape p{
+		background-color:#844076;
+		padding: 15px;
+		text-align: center;
+		clear: both;
+	}
+	</style>
 </head>
 <body>
 	<div class="cabecalho">
